--- a/ColorPicker-test.html
+++ b/ColorPicker-test.html
@@ -19,8 +19,8 @@
 	<h1>Test Color Picker Widget:</h1>
 	<p>
 		The ColorPicker script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>.
-		<button onclick="ColorPicker.disableScriptSheet()">Disable ScriptSheet</button> 
-		<button onclick="ColorPicker.enableScriptSheet()">Enable ScriptSheet</button>
+		<input type="button" onclick="ColorPicker.disableScriptSheet()" value="Disable ScriptSheet"> 
+		<input type="button" onclick="ColorPicker.enableScriptSheet()" value="Enable ScriptSheet">
 	</p>
 	<p>The field below just has <code>class="color"</code> on it. The script hooks up the eyedropper button automatically.</p>
 
