--- a/Cookie-test.html
+++ b/Cookie-test.html
@@ -82,9 +82,9 @@ function delCookie() {
 	</ol>
 	
 	<p>
-		<button onclick="setCookie()">Set Cookie</button>
-		<button onclick="getCookie()">Parse Cookie and Output Data Structure</button>
-		<button onclick="delCookie()">Delete Cookie</button>
+		<input type="button" onclick="setCookie()" value="Set Cookie">
+		<input type="button" onclick="getCookie()" value="Parse Cookie and Output Data Structure">
+		<input type="button" onclick="delCookie()" value="Delete Cookie">
 	</p>
 	
 <pre id="in">{
