--- a/ImageShadow-test.html
+++ b/ImageShadow-test.html
@@ -28,8 +28,8 @@
 	<h1>Test Image Shadows:</h1>
 	
 	<p>The ImageShadow script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>.
-		<button onclick="ImageShadow.enableScriptSheet()">Enable ScriptSheet</button>
-		<button onclick="ImageShadow.disableScriptSheet()">Disable ScriptSheet</button>
+		<input type="button" onclick="ImageShadow.enableScriptSheet()" value="Enable ScriptSheet">
+		<input type="button" onclick="ImageShadow.disableScriptSheet()" value="Disable ScriptSheet">
 	</p>
 		
 	<p>This image is inline. There's lots of text here so you can see what happens when the text wraps. <img src="assets/photo-thumbnail.jpg" class="shadow">
