--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -18,6 +18,13 @@
 </head>
 <body>
 
+	<h1>Test OSX Bar</h1>
+	<p>
+		The OSXBar script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>.
+		<input type="button" onclick="OSXBar.disableScriptSheet()" value="Disable ScriptSheet"> 
+		<input type="button" onclick="OSXBar.enableScriptSheet()" value="Enable ScriptSheet">
+	</p>
+	
 	<ul class="navigation">
 		<li><a href="http://lojjic.net">Label 1</a></li><!-- linked label -->
 		<li>Label 2 <!-- text label with child menu -->
