--- a/PopupCalendar-test.html
+++ b/PopupCalendar-test.html
@@ -18,8 +18,8 @@
 	
 	<p>
 		The PopupCalendar script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>.
-		<button onclick="PopupCalendar.disableScriptSheet()">Disable ScriptSheet</button> 
-		<button onclick="PopupCalendar.enableScriptSheet()">Enable ScriptSheet</button>
+		<input type="button" onclick="PopupCalendar.disableScriptSheet()" value="Disable ScriptSheet"> 
+		<input type="button" onclick="PopupCalendar.enableScriptSheet()" value="Enable ScriptSheet">
 	</p>
 	
 	<p>The field below just has <code>class="date"</code> on it. The script hooks up the calendar button automatically.</p>
