--- a/ScriptSheet-test.html
+++ b/ScriptSheet-test.html
@@ -41,9 +41,9 @@
 	</p>
 	
 	<p>
-		<!--<button onclick="var c = new Cookie('preferredStyle'); c.setValue('gobsmacked'); c.setLifespan(60*60*24*365);">Set Phony Cookie</button>-->
-		<button onclick="alert(unescape(document.cookie));">Alert Cookies</button>
-		<button onclick="new Cookie('preferredStyle').forget(); new Cookie('treeMenuOpenNodes').forget();">Reset Cookies</button>
+		<!--<input type="button" onclick="var c = new Cookie('preferredStyle'); c.setValue('gobsmacked'); c.setLifespan(60*60*24*365);" value="Set Phony Cookie">-->
+		<input type="button" onclick="alert(unescape(document.cookie));" value="Alert Cookies">
+		<input type="button" onclick="new Cookie('preferredStyle').forget(); new Cookie('treeMenuOpenNodes').forget();" value="Reset Cookies">
 	</p>
 	
 	<ul class="navigation">
