--- a/TitleTip-test.html
+++ b/TitleTip-test.html
@@ -21,8 +21,8 @@ acronym {border-bottom:1px dotted;}
 
 <p>
 	The TitleTip script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>.
-	<button onclick="TitleTip.disableScriptSheet()">Disable ScriptSheet</button> 
-	<button onclick="TitleTip.enableScriptSheet()">Enable ScriptSheet</button>
+	<input type="button" onclick="TitleTip.disableScriptSheet()" value="Disable ScriptSheet"> 
+	<input type="button" onclick="TitleTip.enableScriptSheet()" value="Enable ScriptSheet">
 </p>
 
 <p>
