--- a/SortableTableColumn-test.html
+++ b/SortableTableColumn-test.html
@@ -29,8 +29,8 @@ th.sortable-table-column-sorted-down {background-image:url(assets/sort_arrow_dow
 	<h1>Test Sortable Table Columns</h1>
 	<p>
 		This script runs as a <a href="ScriptSheet.js" title="Framework for applying scripts as styles and switching between them">ScriptSheet</a>. When using it as a ScriptSheet, be aware that it may not return the table's DOM to its exact original state when disabled.
-		<button onclick="SortableTableColumn.disableScriptSheet()">Disable ScriptSheet</button> 
-		<button onclick="SortableTableColumn.enableScriptSheet()">Enable ScriptSheet</button>
+		<input type="button" onclick="SortableTableColumn.disableScriptSheet()" value="Disable ScriptSheet"> 
+		<input type="button" onclick="SortableTableColumn.enableScriptSheet()" value="Enable ScriptSheet">
 	</p>
 	
 <table cellspacing="0">
