Use normal ScriptSheet <link> declaration instead of directly calling (enable|disable)ScriptName

--- a/AccessKey-test.html
+++ b/AccessKey-test.html
@@ -2,12 +2,11 @@
 <head>
 	<title>AccessKey underlining</title>
 
-	<script language="JavaScript" src="IEtoW3C-loader.js"></script>
-	<script language="JavaScript" src="AccessKey.js"></script>
-	<script language="JavaScript">
-			window.addEventListener("load",AccessKey.enableScriptSheet,false);
-	</script>
-
+	<script type="text/javascript" src="IEtoW3C-loader.js"></script>
+	<script type="text/javascript" src="AccessKey.js"></script>
+	<script type="text/javascript" src="ScriptSheet.js"></script>
+	
+	<link rel="scriptsheet" type="text/javascript" href="AccessKey.js#AccessKey">
 	<link rel="stylesheet" type="text/css" href="AccessKey.css" />
 
 </head>
