--- a/PopupCalendar-test.html
+++ b/PopupCalendar-test.html
@@ -4,11 +4,11 @@
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
 <script type="text/javascript" src="PopupCalendar.js"></script>
-<script type="text/javascript">
-	window.addEventListener("load", PopupCalendar.enableScriptSheet, false);
-</script>
+<script type="text/javascript" src="ScriptSheet.js"></script>
+
 
 <link rel="stylesheet" type="text/css" href="PopupCalendar.css" />
+<link rel="scriptsheet" type="text/javascript" href="PopupCalendar.js#PopupCalendar" />
 
 </head>
 
