--- a/SortableTableColumn-test.html
+++ b/SortableTableColumn-test.html
@@ -18,10 +18,9 @@ th.sortable-table-column-sorted-down {background-image:url(assets/sort_arrow_dow
 
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="SortableTableColumn.js"></script>
-<script type="text/javascript">
-	window.addEventListener("load",SortableTableColumn.enableScriptSheet,false);
-</script>
+<script type="text/javascript" src="ScriptSheet.js"></script>
 
+<link rel="scriptsheet" type="text/javascript" href="SortableTableColumn.js#SortableTableColumn" title="default" />
 
 </head>
 <body>
