--- a/TreeMenu-test.html
+++ b/TreeMenu-test.html
@@ -6,10 +6,10 @@
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="Cookie.js"></script>
 <script type="text/javascript" src="TreeMenu.js"></script>
-<script type="text/javascript">
-	window.addEventListener("load",TreeMenu.enableScriptSheet,false);
-</script>
+<script type="text/javascript" src="ScriptSheet.js"></script>
 
+
+<link rel="scriptsheet" type="text/javascript" href="TreeMenu.js#TreeMenu" />
 <link rel="stylesheet" type="text/css" href="TreeMenu.css" />
 <style type="text/css">
 .debug * {border:1px dotted red;}
