--- a/ColorPicker-test.html
+++ b/ColorPicker-test.html
@@ -5,10 +5,9 @@
 <script type="text/javascript" src="PopupObject.js"></script>
 <script type="text/javascript" src="TitleTip.js"></script>
 <script type="text/javascript" src="ColorPicker.js"></script>
-<script type="text/javascript">
-	window.addEventListener("load", ColorPicker.enableScriptSheet, false);
-</script>
+<script type="text/javascript" src="ScriptSheet.js"></script>
 
+<link rel="scriptsheet" type="text/javascript" href="ColorPicker.js#ColorPicker" />
 <link rel="stylesheet" type="text/css" href="ColorPicker.css" />
 <link rel="stylesheet" type="text/css" href="TitleTip.css" />
 
@@ -25,9 +24,6 @@
 	<p>The field below just has <code>class="color"</code> on it. The script hooks up the eyedropper button automatically.</p>
 
 	<p><input type="text" size="6" maxlength="6" class="color"></p>
-
-
-
 
 </body>
 </html>
