--- a/ImageShadow-test.html
+++ b/ImageShadow-test.html
@@ -2,10 +2,10 @@
 <head>
 
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
+<script type="text/javascript" src="ScriptSheet.js"></script>
 <script type="text/javascript" src="ImageShadow.js"></script>
-<script type="text/javascript">
-	window.addEventListener("load", ImageShadow.enableScriptSheet, false);
-</script>
+
+<link rel="scriptsheet" type="text/javascript" href="ImageShadow.js#ImageShadow" />
 
 <style type="text/css">
 	body {background-image:url(assets/background.jpg); font:12px sans-serif;}
