--- a/TitleTip-test.html
+++ b/TitleTip-test.html
@@ -2,10 +2,10 @@
 <head>
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
+<script type="text/javascript" src="ScriptSheet.js"></script>
 <script type="text/javascript" src="TitleTip.js"></script>
-<script type="text/javascript">
-	window.addEventListener("load", TitleTip.enableScriptSheet, false);
-</script>
+
+<link rel="scriptsheet" type="text/javaascript" href="TitleTip.js#TitleTip" />
 
 <link rel="stylesheet" type="text/css" href="TitleTip.css" />
 <style type="text/css">
