--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -2,6 +2,7 @@
 <head>
 	<title>OSX Bar test</title>
 	<script type="text/javascript" src="IEtoW3C-loader.js"></script>
+	<script type="text/javascript" src="Cookie.js"></script>
 	<script type="text/javascript" src="PopupObject.js"></script><!-- submenu popup based on this class -->
 	<script type="text/javascript" src="OSXBar.js"></script>
 	<script type="text/javascript">
