--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -3,13 +3,12 @@
 	<title>OSX Bar test</title>
 	<script type="text/javascript" src="IEtoW3C-loader.js"></script>
 	<script type="text/javascript" src="Cookie.js"></script>
-	<script type="text/javascript" src="PopupObject.js"></script><!-- submenu popup based on this class -->
 	<script type="text/javascript" src="OSXBar.js"></script>
-	<script type="text/javascript">
-		window.addEventListener("load",OSXBar.enableScriptSheet,false);
-	</script>
+	<script type="text/javascript" src="ScriptSheet.js"></script>
+	
 	
 	<link rel="stylesheet" type="text/css" href="OSXBar.css" />
+	<link rel="scriptsheet" type="text/javascript" href="OSXBar.js#OSXBar" />
 	
 	<style type="text/css">
 	* {font-size:12px; font-family:Arial,sans-serif;}
