--- a/RoundedCorners-test.html
+++ b/RoundedCorners-test.html
@@ -4,15 +4,11 @@
 <script type="text/javascript" src="IEtoW3C-loader.js"></script>
 <script type="text/javascript" src="RoundedCorners.js"></script>
 <script type="text/javascript" src="ScriptSheet.js"></script>
-<link rel="scriptsheet" type="text/javascript" href="RoundedCorners.js#RoundedCorners" title="default" />
 
+<link rel="scriptsheet" type="text/javascript" href="RoundedCorners.js#RoundedCorners" title="default" />
+<link rel="stylesheet" type="text/css" href="RoundedCorners.css" title="default" />
 <style type="text/css">
-.rounded-corners {border:1px solid #CCC; padding:2em;}
-.rounded-corner {width:12px; height:12px; border:solid red;}
-.top-left {border-width:1px 0 0 1px;}
-.top-right {border-width:1px 1px 0 0;}
-.bottom-left {border-width:0 0 1px 1px;}
-.bottom-right {border-width:0 1px 1px 0;}
+.rounded-corners {border:1px solid #000; padding:2em;}
 </style>
 
 </head>
