Reset all elements in IE5

--- a/ScriptSheet-test-selectors.html
+++ b/ScriptSheet-test-selectors.html
@@ -18,6 +18,7 @@ function highlight(selector) {
 	
 	//reset all:
 	elts = document.getElementsByTagName("*");
+	if(!elts.length && document.all) elts = document.all;
 	for(i=0; i<elts.length; i++) if(elts[i].tagName.toLowerCase()!="input") elts[i].style.border = "1px dotted #CCC";
 	
 	//highlight matching:
