--- a/OSXBar-test.html
+++ b/OSXBar-test.html
@@ -4,6 +4,9 @@
 	<script type="text/javascript" src="IEtoW3C-loader.js"></script>
 	<script type="text/javascript" src="Cookie.js"></script>
 	<script type="text/javascript" src="OSXBar.js"></script>
+	<script type="text/javascript">
+	OSXBar.defaultIcon = "assets/icon-48x48.png";
+	</script>
 	<script type="text/javascript" src="ScriptSheet.js"></script>
 	
 	
