set default icon for osxbar; change value for [null] style chooser option

--- a/ScriptSheet-test.html
+++ b/ScriptSheet-test.html
@@ -8,6 +8,9 @@
 <script type="text/javascript" src="ScriptSheet.js"></script>
 <script type="text/javascript" src="PopupObject.js"></script>
 <script type="text/javascript" src="OSXBar.js"></script>
+<script type="text/javascript">
+OSXBar.defaultIcon = "assets/icon-48x48.png";
+</script>
 <script type="text/javascript" src="TreeMenu.js"></script>
 <script type="text/javascript" src="AccessKey.js"></script>
 <script type="text/javascript" src="TitleTip.js"></script>
@@ -36,7 +39,7 @@
 		<option value="Mac OS X Dock">Mac OS X Dock</option>
 		<option value="Tree Menu">Tree Menu</option>
 		<option value="Tree Menu, no accesskeys">Tree Menu, no accesskeys</option>
-		<option value="null">No Style</option>
+		<option value="[null]">No Style</option>
 		</select>
 	</p>
 	
@@ -93,8 +96,6 @@
 	</ul>
 	
 	
-	
-
 
 </body>
 </html>
