add css style, header changes

--- a/OSXBar-doc.html
+++ b/OSXBar-doc.html
@@ -2,6 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>OSXBar.js Documentation</title>
+	<style type="text/css">
+	body {font-family:sans-serif; padding:0; margin:.5em 2em;}
+	h1 {font-size:1.5em; font-weight:bold; border-bottom:3px double; padding-bottom:.5em;}
+	h2 {font-size:1.2em; font-weight:bold; background:#EEE; padding:0 .5em; border:1px solid #CCC;}
+	h3 {font-size:1em; font-weight:bold;}
+	p, ul {margin-bottom:1em;}
+	code.block {display:block;}
+	</style>
 </head>
 <body>
 
@@ -10,7 +18,7 @@
 <h2>What It Does:</h2>
 <p>This script presents an HTML unordered list (<code>&lt;ul&gt;</code>) as an icon bar similar to the Mac OS X dock.  The top-level items are presented as icons (which zoom in when the mouse moves near) and the secondary lists as popup menus.</p>
 
-<h2>Usage:</h2>
+<h2>How To Use It::</h2>
 <p>This script will only work on a properly formed HTML unordered list (<code>&lt;ul&gt;</code>). For example:</p>
 <pre><code>&lt;ul id="navigation">
    &lt;li id="item1">&lt;a href="url">Label&lt;/a>&lt;/li>
@@ -42,7 +50,7 @@
 </dl>
 
 
-<h2>Dependencies:</h2>
+<h2>What It Depends On::</h2>
 <ul>
 	<li>IEtoW3C.js or IEtoW3C-loader.js (required for MSIE) - used to make MSIE understand DOM2 Events and Style methods</li>
 	<li>ScriptSheet.js for using the OSXBar style as a ScriptSheet</li>
