--- a/OSXBar-doc.html
+++ b/OSXBar-doc.html
@@ -81,13 +81,25 @@
 </ul>
 
 <h2>License:</h2>
-<p>This work is licensed for use under the Creative Commons Attribution-NonCommercial-ShareAlike license. In summary, you may freely use, modify, and distribute this work as long as:</p>
+
+<p>The contents of this file are subject to the Mozilla Public License Version 1.1 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at <a href="http://www.mozilla.org/MPL/">http://www.mozilla.org/MPL/</a></p>
+
+<p>Software distributed under the License is distributed on an "AS IS" basis, WITHOUT WARRANTY OF
+ANY KIND, either express or implied. See the License for the specific language governing rights and
+limitations under the License.</p>
+
+<p>The Initial Developer of the Original Code is Jason Johnston (jj{at}lojjic[dot]net). Portions created by
+the Initial Developer are Copyright (C) 2004 the Initial Developer. All Rights
+Reserved.</p>
+
+<!--
+<p>Contributor(s):</p>
 <ul>
-	<li>You give me (Jason Johnston) credit,</li>
-	<li>You do not use this work for commercial purposes, and</li>
-	<li>Any redistribution of this or derivative works is made available under a license identical to this one.</li>
+	<li>contributor name</li>
 </ul>
-<p>Before using this work please read the full license at <a href="http://creativecommons.org/licenses/by-nc-sa/1.0/legalcode">http://creativecommons.org/licenses/by-nc-sa/1.0/legalcode</a>.</p>
+-->
+
+<p>This code is provided for you to use free of charge.  If you find it useful please consider making a donation to help me continue to create tools like this one.  You can find my contact info at <a href="http://lojjic.net">http://lojjic.net</a>.</p>
 
 </body>
 </html>
