Fix <title> content; thanks to Brian Lawlor for the heads-up.

--- a/TextAreaResizer-test.html
+++ b/TextAreaResizer-test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Sort columns by clicking on column headers</title>
+<title>Test Textarea Resizing</title>
 
 <style type="text/css">
 textarea {width:100%;}
