--- a/ThrowableObject-test.html
+++ b/ThrowableObject-test.html
@@ -13,11 +13,31 @@
 			elt.style.height = height + "px";
 			elt.style.backgroundColor = bg;
 			elt.style.color = color;
+			elt.className = "thing";
 		elt.appendChild(document.createTextNode(text));
 		document.body.appendChild(elt);
 		new ThrowableObject(elt,plane);
 	}
 	</script>
+	
+	<style type="text/css">
+		html, body {
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+		}
+		* {
+			font: 11px sans-serif;
+		}
+		form {
+			margin: 3em;
+		}
+		.thing {
+			-moz-user-select: none;
+			cursor: default;
+		}
+	</style>
 
 </head>
 <body>
